--- a/index.html
+++ b/index.html
@@ -44,12 +44,18 @@
                 </div>
                 <div class="about-text">
                     <h2>About <span>Me</span></h2>
+                    <li>Name:Sahana B Sulegavi</li>
+                    <li>Roll no: 419</li>
+                    <li>USN:01FE23BCS301</li>
+                    <li>Division:'D'</li>
+                    <li>Course:Design Analysis And Algorithms(DAA)</li>
+                    <li>Course Instructor:Arundhati Mam</li>
                     <p>I'm Sahana B Sulegavi, an aspiring engineer with a passion for innovation and technology.
                         Currently in my second year pursuing computer science engineering at KLE Technological University, Hubli. 
-                        Some of my hobbies are reading books and watching movies.
                         The purpose of this portfolio is to keep track of my learning process and skills development over time.<br>
                         <br>
                     </p>
+                    
         
                     <div class="home-sci">
                         <a href="https://www.linkedin.com/in/sahana-b-sulegavi-b68a77327?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
@@ -232,7 +238,7 @@
                             <td>1</td>
                             <td>419</td>
                             <td>01FE23BCS300</td>
-                            <td><a href=""target="_self">Rashmi M Mathapati</a></td>
+                            <td><a href="https://github.com/Rashmimallayya/daa-portofilo.github"target="_self">Rashmi M Mathapati</a></td>
                         </tr>
                         <tr>
                             <td>2</td>
@@ -250,7 +256,7 @@
                             <td>4</td>
                             <td>431</td>
                             <td>01FE23BCS198</td>
-                            <td><a href=""target="_self">Shrutika Ambure</a></td>
+                            <td><a href="https://shrutikaambure.github.io/newn/"target="_self">Shrutika Ambure</a></td>
                         </tr>
                     </tbody>
                 </table>
