--- a/models/industrial_emission.html
+++ b/models/industrial_emission.html
@@ -95,7 +95,8 @@
         <h2>Pseudocode</h2>
 
         <h3>Linked List</h3>
-        <pre><code>#include &lt;iostream&gt;
+        <pre><code>
+            #include &lt;iostream&gt;
             #include &lt;string&gt;
             #include &lt;ctime&gt;
             #include &lt;sstream&gt;
@@ -207,7 +208,8 @@ int main() {
 </code></pre>
 
         <h3>Hash Table</h3>
-        <pre><code>#include &lt;iostream&gt;
+        <pre><code>
+            #include &lt;iostream&gt;
             #include &lt;vector&gt;
             #include &lt;list&gt;
             #include &lt;string&gt;
