--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <h3>Pollution Management System</h3>
                 <li><a href="./models/air_pollution.html"target="_self"><h4>Air Pollution Management System</h4></a></li>
                 <li><a href="./models/industrial_emission.html"target="_self"><h4>Emission Tracking</h4></a></li>
-                <li><a href="./models/agriculutural_runoff_solutions.html"target="_self"><h4>Agriculural Runoff solutions</h4></a></li>
+                <li><a href="./models/agricultural_runoff_solutions.html"target="_self"><h4>Agriculutal Runoff Solutions</h4></a></li>
 
                 
             </div>
