--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
                 <li><a href="./models/air_pollution.html"target="_self"><h4>Air Pollution Management System</h4></a></li>
                 <li><a href="./models/industrial_emission.html"target="_self"><h4>Emission Tracking</h4></a></li>
                 <li><a href="./models/agricultural_runoff.html"target="_self"><h4>Agricultural Runoff Solutions</h4></a></li>
+                <li><a href="./models/E-Waste Recycling and Water Pollution Monitoring.html"target="_self"><h4>E-Waste Recycling and Water Pollution Monitoring</h4></a></li>
 
                 
             </div>
