--- a/index.html
+++ b/index.html
@@ -399,6 +399,65 @@
             <div class="contact-text">
                 <h2>Business <span>Models</span></h2>
                 <h3>Pollution Management System</h3>
+                <body>
+    <table>
+        <thead>
+            <tr>
+                <th>SL.NO.</th>
+                <th>Business Idea Identified</th>
+                <th>Description</th>
+                <th>Owner</th>
+                <th>Problem Tools</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1.</td>
+                <td>Air Pollution Management</td>
+                <td>Develop affordable, AI-powered air purifiers for households and offices that provide real-time air quality monitoring and filtration.</td>
+                <td>Sahana</td>
+                <td>BST, Graph (Dijkstra's)</td>
+            </tr>
+            <tr>
+                <td>2.</td>
+                <td>Plastic Waste Reduction</td>
+                <td>Create a subscription-based service offering reusable, biodegradable packaging solutions for businesses and individuals.</td>
+                <td>Gurulingamma</td>
+                <td>Hashing, Greedy Algorithm</td>
+            </tr>
+            <tr>
+                <td>3.</td>
+                <td>Industrial Emissions Tracking</td>
+                <td>Develop a blockchain-based platform for tracking and reporting industrial carbon and pollutant emissions.</td>
+                <td>Sahana</td>
+                <td>Linked List, Hash Table</td>
+            </tr>
+            <tr>
+                <td>4.</td>
+                <td>Agricultural Runoff Solutions</td>
+                <td>Design eco-friendly, organic alternatives to traditional fertilizers and pesticides, ensuring reduced environmental impact.</td>
+                <td>Rashm</td>
+                <td>Dynamic Programming</td>
+            </tr>
+            <tr>
+                <td>5.</td>
+                <td>E-Waste Recycling</td>
+                <td>Create a platform for collecting, refurbishing, and reselling e-waste or extracting valuable materials.</td>
+                <td>Shrutika</td>
+                <td>Queues</td>
+            </tr>
+            <tr>
+                <td>6.</td>
+                <td>Water Pollution Monitoring</td>
+                <td>Offer IoT-based water quality monitoring systems to industries, municipalities, and agricultural sectors.</td>
+                <td>Shrutika</td>
+                <td>Heap, Dijkstra's Algorithm</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+                
+
                 <li><a href="./models/air_pollution.html"target="_self"><h4>Air Pollution Management System</h4></a></li>
                 <li><a href="./models/industrial_emission.html"target="_self"><h4>Emission Tracking</h4></a></li>
                 <li><a href="./models/agricultural_runoff.html"target="_self"><h4>Agricultural Runoff Solutions</h4></a></li>
