--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 <td>4.</td>
                 <td>Agricultural Runoff Solutions</td>
                 <td>Design eco-friendly, organic alternatives to traditional fertilizers and pesticides, ensuring reduced environmental impact.</td>
-                <td>Rashm</td>
+                <td>Rashmi</td>
                 <td>Dynamic Programming</td>
             </tr>
             <tr>
