--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
                 <li><a href="./models/industrial_emission.html"target="_self"><h4>Emission Tracking</h4></a></li>
                 <li><a href="./models/agricultural_runoff.html"target="_self"><h4>Agricultural Runoff Solutions</h4></a></li>
                 <li><a href="./models/E-Waste Recycling and Water Pollution Monitoring.html"target="_self"><h4>E-Waste Recycling and Water Pollution Monitoring</h4></a></li>
+                <li><a href="./models/geeta.html"target="_self"><h4>Plastic Waste Reduction</h4></a></li>
 
                 
             </div>
