--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
             The design suggests a balance between functionality, accessibility, and sustainability. 
             This smart city has a special pollution control system to promote sustainability and improved human health.
         </p>
+        <h1>Here is the city plan of Ahmad Nagar:</h1>
+    
+    <!-- Adding an image -->
+    <img src="./img/midclg.jpg" alt="AHMAD NAGAR" width="500" height="300">
     </div>
     
     <!-- Land Distribution Section -->
