--- a/index.html
+++ b/index.html
@@ -421,42 +421,42 @@
         <tbody>
             <tr>
                 <td>1.</td>
-                <td>Air Pollution Management</td>
+                <td><a href="./models/air_pollution.html"target="_self">Air Pollution Management</a></td>
                 <td>Develop affordable, AI-powered air purifiers for households and offices that provide real-time air quality monitoring and filtration.</td>
                 <td>Sahana</td>
                 <td>BST, Graph (Dijkstra's)</td>
             </tr>
             <tr>
                 <td>2.</td>
-                <td>Plastic Waste Reduction</td>
+                <td><a href="./models/geeta.html"target="_self">Plastic Waste Reduction</a></td>
                 <td>Create a subscription-based service offering reusable, biodegradable packaging solutions for businesses and individuals.</td>
                 <td>Gurulingamma</td>
                 <td>Hashing, Greedy Algorithm</td>
             </tr>
             <tr>
                 <td>3.</td>
-                <td>Industrial Emissions Tracking</td>
+                <td><a href="./models/industrial_emission.html"target="_self">Industrial Emissions Tracking</a></td>
                 <td>Develop a blockchain-based platform for tracking and reporting industrial carbon and pollutant emissions.</td>
                 <td>Sahana</td>
                 <td>Linked List, Hash Table</td>
             </tr>
             <tr>
                 <td>4.</td>
-                <td>Agricultural Runoff Solutions</td>
+                <td><a href="./models/agricultural_runoff.html"target="_self">Agricultural Runoff Solutions</a></td>
                 <td>Design eco-friendly, organic alternatives to traditional fertilizers and pesticides, ensuring reduced environmental impact.</td>
                 <td>Rashmi</td>
                 <td>Dynamic Programming</td>
             </tr>
             <tr>
                 <td>5.</td>
-                <td>E-Waste Recycling</td>
+                <td><a href="./models/E-Waste Recycling and Water Pollution Monitoring.html"target="_self"></a>E-Waste Recycling</td>
                 <td>Create a platform for collecting, refurbishing, and reselling e-waste or extracting valuable materials.</td>
                 <td>Shrutika</td>
                 <td>Queues</td>
             </tr>
             <tr>
                 <td>6.</td>
-                <td>Water Pollution Monitoring</td>
+                <td><a href="./models/E-Waste Recycling and Water Pollution Monitoring.html"target="_self"></a>Water Pollution Monitoring</td>
                 <td>Offer IoT-based water quality monitoring systems to industries, municipalities, and agricultural sectors.</td>
                 <td>Shrutika</td>
                 <td>Heap, Dijkstra's Algorithm</td>
