--- a/index.html
+++ b/index.html
@@ -449,14 +449,14 @@
             </tr>
             <tr>
                 <td>5.</td>
-                <td><a href="./models/E-Waste Recycling and Water Pollution Monitoring.html"target="_self"></a>E-Waste Recycling</td>
+                <td><a href="./models/E-Waste Recycling and Water Pollution Monitoring.html"target="_self">E-Waste Recycling</a></td>
                 <td>Create a platform for collecting, refurbishing, and reselling e-waste or extracting valuable materials.</td>
                 <td>Shrutika</td>
                 <td>Queues</td>
             </tr>
             <tr>
                 <td>6.</td>
-                <td><a href="./models/E-Waste Recycling and Water Pollution Monitoring.html"target="_self"></a>Water Pollution Monitoring</td>
+                <td><a href="./models/E-Waste Recycling and Water Pollution Monitoring.html"target="_self">Water Pollution Monitoring</td>
                 <td>Offer IoT-based water quality monitoring systems to industries, municipalities, and agricultural sectors.</td>
                 <td>Shrutika</td>
                 <td>Heap, Dijkstra's Algorithm</td>
