--- a/index.html
+++ b/index.html
@@ -238,25 +238,25 @@
                             <td>1</td>
                             <td>419</td>
                             <td>01FE23BCS300</td>
-                            <td><a href="https://github.com/Rashmimallayya/daa-portofilo.github"target="_self">Rashmi M Mathapati</a></td>
+                            <td><a href="https://rashmimallayya.github.io/daa-rashmi-portfolio.github/"target="_self">Rashmi M Mathapati</a></td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td>448</td>
                             <td>01FE23BCS301</td>
-                            <td><a href="https://github.com/sahana1808/DAA_Portfolio.git"target="_self">Sahana B Sulegavi</a></td>
+                            <td><a href=""target="_self">Sahana B Sulegavi</a></td>
                         </tr>
                         <tr>
                             <td>3</td>
                             <td>446</td>
                             <td>01FE23BCS282</td>
-                            <td><a href="https://github.com/GeetaBiradar63/geeta_portfolio.github.io"target="_self">Gurulingamma V Biradar</a></td>
+                            <td><a href="https://geetabiradar63.github.io/geeta_portfolio.github.io/"target="_self">Gurulingamma V Biradar</a></td>
                         </tr>
                         <tr>
                             <td>4</td>
                             <td>431</td>
                             <td>01FE23BCS198</td>
-                            <td><a href="https://shrutikaambure.github.io/newn/"target="_self">Shrutika Ambure</a></td>
+                            <td><a href="https://shrutikaambure.github.io/DAA1234/"target="_self">Shrutika Ambure</a></td>
                         </tr>
                     </tbody>
                 </table>
