--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 		<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
 			<div class="row justify-content-start pb-3">
 				<div class="col-md-12 heading-section ftco-animate">
-					<h1 class="big">Project Reflections</h1>
+					
 					<h2 class="mb-4">Project Reflections</h2>
 	
 		<p>Sustainability, Environmental Conservation, and Human Health"Throughout my projects this semester, I have focused on integrating sustainable practices, promoting environmental conservation, and improving human health. These projects have allowed me to explore innovative solutions that contribute to reducing the carbon footprint, conserving natural resources, and enhancing the quality of life for individuals. The projects are a reflection of my commitment to sustainability, and they provide practical applications that can make a difference in our world."</p>
@@ -493,7 +493,7 @@
 			<div class="text">
 				<p class="mb-4">
 					<span class="number" data-number="10">0</span> <span>+</span>
-					<span>&nbsp; Projects focused on sustainability and health</span>
+					<span>1+ Projects focused on sustainability and health</span>
 				</p>
 			</div>
 		</div>
