--- a/models/air_pollution.html
+++ b/models/air_pollution.html
@@ -338,10 +338,11 @@ Press any key to continue.
 
         <h3>Graph (Dijkstra's Algorithm)</h3>
         <pre><code>
-#include <iostream>
-#include <vector>
-#include <queue>
-#include <climits> // For INT_MAX
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;queue&gt;
+#include &lt;climits&gt;
+  
 using namespace std;
 
 // Pair to represent (cost, vertex)
