--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                 <td><a href="./models/agricultural_runoff.html"target="_self">Agricultural Runoff Solutions</a></td>
                 <td>Design eco-friendly, organic alternatives to traditional fertilizers and pesticides, ensuring reduced environmental impact.</td>
                 <td>Rashmi</td>
-                <td>Dynamic Programming</td>
+                <td>Dynamic Programming,Greedy technique,Divide and Conquer</td>
             </tr>
             <tr>
                 <td>5.</td>
